errorinfo.txt
mkdir -p /share/sysy-make-template/build/
clang++ -I/share/sysy-make-template/src -I/share/sysy-make-template/build -MMD -MP -Wall -Wno-register -std=c++17 -g -O0 -I/opt/include -c /share/sysy-make-template/build/sysy.tab.cpp -o /share/sysy-make-template/build/sysy.tab.cpp.o
/share/sysy-make-template/src/sysy.y:108:6: error: no matching member function for call to 'push_back'
  v->push_back(unique_ptr<BaseAST>((yyvsp[0].ast_val)));
  ~~~^~~~~~~~~
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_vector.h:1184:7: note: candidate function not viable: no known conversion from 'unique_ptr<BaseAST>' to 'const std::vector<BaseAST>::value_type' (aka 'const BaseAST') for 1st argument
      push_back(const value_type& __x)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_vector.h:1200:7: note: candidate function not viable: no known conversion from 'unique_ptr<BaseAST>' to 'std::vector<BaseAST>::value_type' (aka 'BaseAST') for 1st argument
      push_back(value_type&& __x)
      ^
/share/sysy-make-template/src/sysy.y:109:21: error: assigning to 'std::vector<std::unique_ptr<BaseAST>> *' from incompatible type 'std::unique_ptr<std::vector<BaseAST>>'
  (yyval.vec_val) = v;
                    ^
/share/sysy-make-template/src/sysy.y:340:8: error: no matching member function for call to 'push_back'
    v->push_back(unique_ptr<BaseAST>((yyvsp[0].ast_val)));
    ~~~^~~~~~~~~
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_vector.h:1184:7: note: candidate function not viable: no known conversion from 'unique_ptr<BaseAST>' to 'const std::vector<BaseAST>::value_type' (aka 'const BaseAST') for 1st argument
      push_back(const value_type& __x)
      ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_vector.h:1200:7: note: candidate function not viable: no known conversion from 'unique_ptr<BaseAST>' to 'std::vector<BaseAST>::value_type' (aka 'BaseAST') for 1st argument
      push_back(value_type&& __x)
      ^
/share/sysy-make-template/src/sysy.y:341:23: error: assigning to 'std::vector<std::unique_ptr<BaseAST>> *' from incompatible type 'std::unique_ptr<std::vector<BaseAST>>'
    (yyval.vec_val) = v;
                      ^
4 errors generated.
make: *** [Makefile:84: /share/sysy-make-template/build/sysy.tab.cpp.o] Error 1
